Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25536

QMake projects cannot pe parsed anymore

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 5.0.0-beta1
    • None
    • Windows

    Description

      Qt Creator (5/master) is currently not able to parse a qmake project after opening it. It is only able to parse it after explicitly calling qmake.

      A recent patch changed the defaults in the QMakeProjectManager options. The "Ignore qmake's system() function when parsing a project" was off by default and is now on by default:

      Turning it off enables Qt Creator to parse qmake projects on opening again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes