QMakeProjectManager: Restore original settings defaults

The new default "true" for "Ignore qmake's system() function when
parsing a project" broke initial parsing of an opened qmake project.

Task-number: QTCREATORBUG-25536
Change-Id: Ia155e27051a030b5fbf34ab3b94d7be2b952eb9b
Reviewed-by: hjk <hjk@qt.io>